removed Title from search result snapshot and fixed problem with main background image so it covers the whole frame now

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -27,12 +27,12 @@ h3 {
 }
 
 .cover-photo {
-  width: 100%;
   background-image: url("../../Images/familyphoto.jpg");
+  background-size: cover;
   padding-top: 0em;
   margin: 0;
   background-repeat: no-repeat;
-  background-size: contain;
+  /* background-size: contain; */
   overflow: hidden;
 }
 
